{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 9,
  "lineage": "c10ed1cd-f3ee-9c05-45bd-0388c1dd1329",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-05T00:34:01.680-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/academic-veld-465813-n7/global/firewalls/i27-allow-http",
            "log_config": [],
            "name": "i27-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/networks/nett",
            "params": [],
            "priority": 1001,
            "project": "academic-veld-465813-n7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/firewalls/i27-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "i27-http-nw-tags"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-05T00:34:00.783-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/academic-veld-465813-n7/global/firewalls/i27-allow-ssh",
            "log_config": [],
            "name": "i27-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/networks/nett",
            "params": [],
            "priority": 1002,
            "project": "academic-veld-465813-n7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/firewalls/i27-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "i27-ssh-nw-tags"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "myvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/images/image-1",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/zones/us-central1-a/disks/vm-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-09-05T00:39:35.375-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/academic-veld-465813-n7/zones/us-central1-a/instances/vm-3",
            "instance_id": "2717964679305964888",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "Ji5yamISQBE=",
            "name": "vm-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.63.58.116",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/networks/nett",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/regions/us-central1/subnetworks/i27-subnet",
                "subnetwork_project": "academic-veld-465813-n7"
              }
            ],
            "project": "academic-veld-465813-n7",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/zones/us-central1-a/instances/vm-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "i27-http-nw-tags",
              "i27-ssh-nw-tags"
            ],
            "tags_fingerprint": "jZjFHrw3mso=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_firewall.tf_http",
            "google_compute_firewall.tf_ssh",
            "google_compute_network.tf_vpc",
            "google_compute_subnetwork.tf_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "description": "creating a vpc through terraform",
            "enable_ula_internal_ipv6": false,
            "id": "projects/academic-veld-465813-n7/global/networks/nett",
            "mtu": 0,
            "name": "nett",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8145938455295634612",
            "numeric_id": "8145938455295634612",
            "project": "academic-veld-465813-n7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/networks/nett"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tf_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-05T00:34:01.719-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/academic-veld-465813-n7/regions/us-central1/subnetworks/i27-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "i27-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/global/networks/nett",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "academic-veld-465813-n7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/academic-veld-465813-n7/regions/us-central1/subnetworks/i27-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4036571462253358214
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.tf_vpc"
          ]
        }
      ]
    }
  ]
}